[package]
name = "rust_sniper_bot"
version = "0.1.0"
edition = "2021"
default-run = "main"

# Binary configurations
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "detector"
path = "src/detector.rs"

[[bin]]
name = "testDetector"
path = "src/testDetector.rs"

[[bin]]
name = "testMain"
path = "src/testMain.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
dotenv = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2.0", features = ["abigen", "ws"] }
